[package]
name = "critbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.8.0"
thiserror = "1.0.30"
node-allocator = { path = "../node-allocator" } 

[dev-dependencies]
rand_distr = "0.4.3"
rand = "0.7"
tokio = { version = "1.8.4", features = ["rt-multi-thread", "macros"] }
env_logger = "*"
